feat:资源修改为公司资源

--- a/web/templates/admin/admin_index.html
+++ b/web/templates/admin/admin_index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui"/>
     <title>管理面板</title>
-    <link rel="shortcut icon" href="/assets/static/index/images/favicon.png"/>
+    {{ if .ConfigSite.SiteFavicon }}
+        <link rel="shortcut icon" href="data:image/png;base64,{{ .ConfigSite.SiteFavicon }}">
+    {{ else }}
+        <link rel="shortcut icon" href="/assets/static/index/images/favicon.png">
+    {{ end }}
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-touch-fullscreen" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
@@ -25,7 +29,11 @@
             <!-- logo -->
             <div id="logo" class="sidebar-header">
                 <a href="/">
-                    <img src="/assets/static/index/images/logo_dark@2x.png"/>
+                    {{ if .ConfigSite.SiteLogo }}
+                        <img src="data:image/png;base64,{{ .ConfigSite.SiteLogo }}" width="100%" alt=""/>
+                    {{ else }}
+                        <img src="/assets/static/index/images/logo_dark@2x.png"/>
+                    {{ end }}
                 </a>
             </div>
             <div class="lyear-layout-sidebar-info lyear-scroll">
