--- a/web/templates/dashboard/dashboard.html
+++ b/web/templates/dashboard/dashboard.html
@@ -66,9 +66,9 @@
                     <div class="card-title">开源信息</div>
                 </header>
                 <div class="card-body">
-                    <p>GitHub 地址：<a target="_blank" href="https://github.com/ch3nnn/webstack-go">webstack-go</a></p>
-                    <p>GitHub Stars：<a href="https://github.com/ch3nnn/webstack-go/stargazers"><img alt="GitHub stars" src="https://img.shields.io/github/stars/ch3nnn/webstack-go?style=flat-square"></a></p>
-                    <p>GitHub Forks：<a href="https://github.com/ch3nnn/webstack-go/network"><img alt="GitHub forks" src="https://img.shields.io/github/forks/ch3nnn/webstack-go?style=flat-square"></a></p>
+                    <p>GitHub 地址：<a target="_blank" href="https://github.com/freeb-vip/webstack-go.git">webstack-go</a></p>
+                    <p>GitHub Stars：<a href="https://github.com/freeb-vip/webstack-go/stargazers"><img alt="GitHub stars" src="https://img.shields.io/github/stars/ch3nnn/webstack-go?style=flat-square"></a></p>
+                    <p>GitHub Forks：<a href="https://github.com/freeb-vip/webstack-go/network"><img alt="GitHub forks" src="https://img.shields.io/github/forks/ch3nnn/webstack-go?style=flat-square"></a></p>
                 </div>
             </div>
         </div>
