--- a/web/templates/index/about.html
+++ b/web/templates/index/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="viggo"/>
-    <title>WebStack-Go - 网址导航</title>
+    <title>飞比智能-导航</title>
     <meta name="keywords" content="网址导航"/>
     <meta name="description" content="WebStack-Go - 基于 Golang 开源的网址导航网站"/>
 
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="navbar-mobile-clear"></div>
-        <a href="https://github.com/ch3nnn/webstack-go" target="_blank">
+        <a href="https://github.com/freeb-vip/webstack-go.git" target="_blank">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png?resize=149%2C149" alt="Fork me on GitHub"/>
         </a>
     </div>
@@ -98,8 +98,8 @@
         <footer class="main-footer sticky footer-type-1 fixed">
             <div class="footer-inner">
                 <div class="footer-text">
-                    &copy; 2022- 2023
-                    <a href="/about"><strong>WebStack-Go</strong></a> design by <a href="https://ch3nnn.cn" target="_blank"><strong>Ch3nnn</strong></a>
+                    &copy; 2019- 2025
+                    <a href="/about"><strong>Freeb</strong></a> design by <a href="https://www.freeb.vip" target="_blank"><strong>飞比智能</strong></a>
                 </div>
                 <div class="go-up">
                     <a href="#" rel="go-top">
