--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -127,7 +127,7 @@
             </ul>
             <ul class="user-info-menu right-links list-inline list-unstyled">
                 <li class="hidden-sm hidden-xs">
-                    <a href="https://github.com/ch3nnn/webstack-go" target="_blank">
+                    <a href="https://github.com/freeb-vip/webstack-go.git" target="_blank">
                         <i class="fa-github"></i> GitHub
                     </a>
                 </li>
