--- a/web/templates/index/about.html
+++ b/web/templates/index/about.html
@@ -11,14 +11,14 @@
 
     <link rel="shortcut icon" href="/assets/static/index/images/favicon.png"/>
     <link rel="stylesheet" href="/assets/static/index/css/fonts/linecons/css/linecons.css"/>
-    <link rel="stylesheet" href="/assets/static/index/css/fonts/fontawesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/bootstrap.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/xenon-core.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/xenon-components.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/xenon-skins.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/nav.css"/>
     <link rel="stylesheet" href="/assets/static/index/css/hclonely.css"/>
-    <script src="assets/static/index/js/jquery-1.11.1.min.js"></script>
+    <script src="/assets/static/index/js/jquery-1.11.1.min.js"></script>
 </head>
 
 <body class="page-body boxed-container">
@@ -26,14 +26,11 @@
     <div class="navbar-inner">
         <div class="navbar-brand">
             <a href="/" class="logo">
-                <img src="assets/static/index/images/logo_dark@2x.png" width="100%" alt="" class="hidden-xs"/>
-                <img src="assets/static/index/images/logo@2x.png" width="100%" alt="" class="visible-xs"/>
+                <img src="/assets/static/index/images/logo_dark@2x.png" width="100%" alt="" class="hidden-xs"/>
+                <img src="/assets/static/index/images/logo@2x.png" width="100%" alt="" class="visible-xs"/>
             </a>
         </div>
         <div class="navbar-mobile-clear"></div>
-        <a href="https://github.com/freeb-vip/webstack-go.git" target="_blank">
-            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png?resize=149%2C149" alt="Fork me on GitHub"/>
-        </a>
     </div>
 </nav>
 <div class="page-container">
@@ -80,7 +77,7 @@
                                             <br/>
                                             <blockquote>
                                                 <p>
-                                                    这是一个公益项目，而且是<a href="https://github.com/ch3nnn/webstack-go"> 开源 </a>的。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站
+                                                    这是一个公益项目。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站
                                                     <a href="https://ch3nnn.cn/about/">ch3nnn.cn</a>中的联系方式找到我，欢迎与我交流分享。
                                                 </p>
                                             </blockquote>
@@ -103,7 +100,7 @@
                 </div>
                 <div class="go-up">
                     <a href="#" rel="go-top">
-                        <i class="fa-angle-up"></i>
+                        <i class="fa fa-angle-up"></i>
                     </a>
                 </div>
             </div>
@@ -111,9 +108,9 @@
     </div>
 </div>
 <!-- Bottom Scripts -->
-<script src="assets/static/index/js/bootstrap.min.js"></script>
-<script src="assets/static/index/js/TweenMax.min.js"></script>
-<script src="assets/static/index/js/resizeable.js"></script>
+<script src="/assets/static/index/js/bootstrap.min.js"></script>
+<script src="/assets/static/index/js/TweenMax.min.js"></script>
+<script src="/assets/static/index/js/resizeable.js"></script>
 <!-- JavaScripts initializations and stuff -->
 <script type="text/javascript" src="/assets/static/admin/js/httpclient.js"></script>
 <script type="text/javascript" src="/assets/static/plugin/bootstrap-markdown-editor/js/marked.min.js"></script>
