--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -17,14 +17,15 @@
     {{ end }}
 
     <link rel="stylesheet" href="/assets/static/index/css/fonts/linecons/css/linecons.css">
-    <link rel="stylesheet" href="/assets/static/index/css/fonts/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/static/index/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/static/index/css/xenon-core.css">
     <link rel="stylesheet" href="/assets/static/index/css/xenon-components.css">
     <link rel="stylesheet" href="/assets/static/index/css/xenon-skins.css">
     <link rel="stylesheet" href="/assets/static/index/css/nav.css">
     <link rel="stylesheet" href="/assets/static/index/css/hclonely.css">
-    <script src="assets/static/index/js/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="/assets/static/index/css/ant-card.css">
+    <script src="/assets/static/index/js/jquery-1.11.1.min.js"></script>
     <script>
         var userDefinedSearchData = {
             "custom": false,
@@ -34,26 +35,27 @@
             "data": [{"name": "百度", "img": "url(https://www.baidu.com/favicon.ico)", "url": "https://www.baidu.com/s?wd="}]
         };
     </script>
-    <script src="assets/static/index/js/header.js"></script>
+    <script src="/assets/static/index/js/header.js"></script>
 </head>
 
 <body class="page-body">
 <!-- skin-white -->
 <div class="page-container">
-    <div class="sidebar-menu toggle-others fixed">
+    <div class="sidebar-menu toggle-others collapsed">
         <div class="sidebar-menu-inner">
             <header class="logo-env">
                 <!-- logo -->
                 <div class="logo">
                     <a href="/" class="logo-expanded">
                         {{ if .ConfigSite.SiteLogo }}
-                            <img src="data:image/png;base64,{{ .ConfigSite.SiteLogo }}" width="100%" alt=""/>
+                            <img src="data:image/png;base64,{{ .ConfigSite.SiteLogo }}" height="32" alt=""/>
                         {{ else }}
-                            <img src="assets/static/index/images/logo@2x.png" width="100%" alt=""/>
+                            <img src="/assets/static/index/images/logo@2x.png" height="32" alt=""/>
                         {{ end }}
+                        <span class="logo-text">{{ .ConfigSite.SiteTitle }}</span>
                     </a>
-                    <a href="index.html" class="logo-collapsed">
-                        <img src="assets/static/index/images/logo-collapsed@2x.png" width="40" alt=""/>
+                    <a href="/" class="logo-collapsed">
+                        <img src="/assets/static/index/images/logo-collapsed@2x.png" width="32" alt=""/>
                     </a>
                 </div>
                 <div class="mobile-menu-toggle visible-xs">
@@ -61,22 +63,24 @@
                         <i class="linecons-cog"></i>
                     </a>
                     <a href="#" data-toggle="mobile-menu">
-                        <i class="fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </a>
                 </div>
             </header>
             <ul id="main-menu" class="main-menu">
                 {{ range .CategoryTree }}
                 {{ if .Child }}
-                <li>
-                    <a>
+                <li class="has-sub">
+                    <a href="javascript:void(0)">
                         <i class="{{ .Icon }}"></i>
                         <span class="title">{{ .Name }}</span>
                     </a>
                     <ul>
                         {{ range .Child }}
                         <li>
-                            <a href="#{{ .Name }}" class="smooth"><span class="title">{{ .Name }}</span></a>
+                            <a href="#{{ .Name }}" class="smooth">
+                                <span class="title">{{ .Name }}</span>
+                            </a>
                         </li>
                         {{ end }}
                     </ul>
@@ -94,9 +98,8 @@
                 {{ if .About.IsAbout }}
                 <li>
                     <a href="/about">
-                        <i class="lni lni-heart"></i>
-                        <span class="tooltip-blue">关于本站</span>
-                        <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
+                        <i class="fa fa-heart-o"></i>
+                        <span class="title">关于本站</span>
                     </a>
                 </li>
                 {{ end }}
@@ -109,39 +112,27 @@
             <!-- Left links for user info navbar -->
             <ul class="user-info-menu left-links list-inline list-unstyled">
                 <li class="hidden-sm hidden-xs">
-                    <a href="#" data-toggle="sidebar">
-                        <i class="fa-bars"></i>
+                    <a href="#" data-toggle="sidebar" style="font-size: 18px;">
+                        <i class="fa fa-bars"></i>
                     </a>
                 </li>
-                <!-- 暗黑模式 -->
-                <li class="switch-mode hover-line" onclick="switchNightMode()">
-                    <a href="#">
-                        <svg t="1593061068148" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                             p-id="1681" width="16" height="16">
-                            <path d="M582.4 326.4c-140.8 0-256 115.2-256 256s115.2 256 256 256 256-115.2 256-256-115.2-256-256-256z m0 448c-70.4 0-131.2-36.8-164.8-92.8 12.8 3.2 27.2 4.8 40 4.8 121.6 0 219.2-99.2 219.2-219.2 0-17.6-1.6-35.2-6.4-52.8 60.8 32 102.4 96 102.4 169.6 1.6 104-84.8 190.4-190.4 190.4zM582.4 262.4c17.6 0 32-14.4 32-32v-128c0-17.6-14.4-32-32-32s-32 14.4-32 32v128c0 17.6 14.4 32 32 32zM262.4 582.4c0-17.6-14.4-32-32-32h-128c-17.6 0-32 14.4-32 32s14.4 32 32 32h128c17.6 0 32-14.4 32-32zM310.4 356.8c6.4 6.4 14.4 9.6 22.4 9.6 8 0 16-3.2 22.4-9.6 12.8-12.8 12.8-32 0-44.8l-91.2-91.2c-12.8-12.8-32-12.8-44.8 0-12.8 12.8-12.8 32 0 44.8l91.2 91.2zM944 220.8c-12.8-12.8-32-12.8-44.8 0l-91.2 91.2c-12.8 12.8-12.8 32 0 44.8 6.4 6.4 14.4 9.6 22.4 9.6 8 0 16-3.2 22.4-9.6l91.2-91.2c12.8-12.8 12.8-33.6 0-44.8zM310.4 808l-91.2 91.2c-12.8 12.8-12.8 32 0 44.8 6.4 6.4 14.4 9.6 22.4 9.6 8 0 16-3.2 22.4-9.6l91.2-91.2c12.8-12.8 12.8-32 0-44.8-11.2-11.2-32-11.2-44.8 0z"
-                                  p-id="1682" fill="#707070"></path>
-                        </svg>
-                    </a>
+                <li class="hidden-xs" style="display: flex; align-items: center; padding-left: 10px;">
+                    <span style="color: rgba(0,0,0,0.45); font-size: 14px;">首页 / 项目列表</span>
                 </li>
-
             </ul>
             <ul class="user-info-menu right-links list-inline list-unstyled">
-                <li class="hidden-sm hidden-xs">
-                    <a href="https://github.com/freeb-vip/webstack-go.git" target="_blank">
-                        <i class="fa-github"></i> GitHub
-                    </a>
-                </li>
             </ul>
-            <!-- <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> -->
-
         </nav>
-        <!-- 搜索 -->
-        <section class="sousuo">
+        <div class="content-container">
+            <!-- 搜索 -->
+            <section class="sousuo">
             <div class="search">
                 <div class="search-box">
                     <span class="search-icon"
                           style="background: url(/assets/static/index/images/search_icon.png) 0px 0px; opacity: 1;"></span>
-                    <input type="text" id="txt" class="search-input" autocomplete="off" placeholder="请输入关键字，按回车 / Enter 搜索">
+                    <input type="text" id="txt" class="search-input" autocomplete="off" placeholder="请输入关键字，按回车 / Enter 搜索" style="padding-right: 150px;">
+                    <button class="translate-btn" id="translate-btn" title="翻译" onclick="var s=document.getElementById('txt').value; if(s){window.open('https://translate.google.com/?sl=auto&tl=zh-CN&text='+encodeURIComponent(s)+'&op=translate')}else{window.open('https://translate.google.com/')}" style="position: absolute; right: 100px; top: 0; width: 50px; line-height: 48px; background: transparent; border: none; font-size: 20px; color: #1890ff; outline: none; padding: 0 10px; cursor: pointer; z-index: 999;"><i class="fa fa-language"></i></button>
+                    <button class="ai-btn" id="ai-btn" title="AI 问答" onclick="var s=document.getElementById('txt').value; var token='{{ .ConfigSite.AiToken }}'; if(token && token.startsWith('http')){ window.open(token + encodeURIComponent(s)) } else if(s){window.open('https://metaso.cn/?q='+encodeURIComponent(s))}else{window.open('https://metaso.cn/')}" style="position: absolute; right: 50px; top: 0; width: 50px; line-height: 48px; background: transparent; border: none; font-size: 16px; font-weight: bold; color: #1890ff; outline: none; padding: 0 10px; cursor: pointer; z-index: 999;">AI</button>
                     <button class="search-btn" id="search-btn"><i class="fa fa-search"></i></button>
                 </div>
                 <!-- 搜索热词 -->
@@ -162,34 +153,53 @@
             </div>
         </section>
         <script>search('/assets/static/index/images/search_icon.png')</script>
+
+        <!-- 分类筛选 -->
+        <div class="category-filter">
+            <div class="filter-item">
+                <div class="filter-label">分类查找:</div>
+                <div class="filter-tags" id="category-tags">
+                    <div class="filter-tag active" data-category="all">全部</div>
+                    {{ range .CategorySites }}
+                    <div class="filter-tag" data-category="{{ .Category }}">{{ .Category }}</div>
+                    {{ end }}
+                </div>
+            </div>
+        </div>
+
         <!-- 常用推荐 -->
+        <div id="sites-container">
         {{ range .CategorySites }}
         {{ if .SiteList }}
-        <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="{{ .Category }}"></i>{{ .Category }}</h4>
-        <div class="row">
-            {{ range .SiteList }}
-            <div class="col-sm-3">
-                <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('{{ .URL }}', '_blank')"
-                     data-toggle="tooltip" data-placement="bottom" title="" data-original-title="{{ .Description }}">
-                    <div class="xe-comment-entry">
-                        <a class="xe-user-img">
-                            <img data-src="data:image/png;base64,{{ .Icon }}" class="lozad img-circle" width="40">
-                        </a>
-                        <div class="xe-comment">
-                            <a href="#" class="xe-user-name overflowClip_1">
-                                <strong>{{ .Title }}</strong>
-                            </a>
-                            <p class="overflowClip_2">{{ .Description }}</p>
+        <div class="category-section" data-category="{{ .Category }}">
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="{{ .Category }}"></i>{{ .Category }}</h4>
+            <div class="row">
+                {{ range .SiteList }}
+                <div class="col-sm-4 col-md-3">
+                    <div class="ant-card" onclick="window.open('{{ .URL }}', '_blank')"
+                         data-toggle="tooltip" data-placement="bottom" title="{{ .Description }}">
+                        <div class="ant-card-cover">
+                            <img data-src="data:image/png;base64,{{ .Icon }}" class="lozad" alt="{{ .Title }}">
+                        </div>
+                        <div class="ant-card-body">
+                            <div class="ant-card-meta-title">{{ .Title }}</div>
+                            <div class="ant-card-meta-description">{{ .Description }}</div>
+                        </div>
+                        <div class="ant-card-footer">
+                            <span><i class="fa fa-clock-o" style="margin-right: 4px;"></i>{{ .CreatedAt.Format "2006-01-02" }}</span>
+                            <i class="fa fa-external-link"></i>
                         </div>
                     </div>
                 </div>
+                {{ end }}
             </div>
-            {{ end }}
+            <br/>
         </div>
-        <br/>
         {{ end }}
         {{ end }}
+        </div>
         <!-- END 常用推荐 -->
+        </div>
         <footer class="main-footer sticky footer-type-1">
             <div class="footer-inner">
                 <!-- Add your copyright text here -->
@@ -199,12 +209,12 @@
                 </div>
                 {{ else }}
                 <div class="footer-text">
-                    &copy; 2022-2023
+                    &copy; 2022-2025
                     <a href="/about">
-                        <strong>WebStack-Go</strong>
+                        <strong>Freeb Nav</strong>
                     </a>
                     design by
-                    <a href="https://ch3nnn.cn" target="_blank">
+                    <a href="https://github.com/freeb-vip/webstack-go" target="_blank">
                         <strong>Ch3nnn</strong>
                     </a>
                 </div>
@@ -212,7 +222,7 @@
                 <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
                 <div class="go-up">
                     <a href="#" rel="go-top">
-                        <i class="fa-angle-up"></i>
+                        <i class="fa fa-angle-up"></i>
                     </a>
                 </div>
             </div>
@@ -272,25 +282,48 @@
 
     var href = "";
     var pos = 0;
-    $("a.smooth").click(function (e) {
-        $("#main-menu li").each(function () {
-            $(this).removeClass("active");
+        $("a.smooth").click(function (e) {
+            $("#main-menu li").each(function () {
+                $(this).removeClass("active");
+            });
+            $(this).parent("li").addClass("active");
+            // 如果是子菜单，父菜单也要激活
+            $(this).parents(".has-sub").addClass("active");
+            
+            e.preventDefault();
+            href = decodeURI($(this).attr("href"));
+            pos = $(href).position().top - 30;
         });
-        $(this).parent("li").addClass("active");
-        e.preventDefault();
-        href = decodeURI($(this).attr("href"));
-        pos = $(href).position().top - 30;
+
+    // 分类筛选逻辑
+    $(document).on('click', '.filter-tag', function() {
+        const category = $(this).data('category');
+        
+        // 切换激活状态
+        $('.filter-tag').removeClass('active');
+        $(this).addClass('active');
+        
+        if (category === 'all') {
+            $('.category-section').fadeIn(300);
+        } else {
+            $('.category-section').hide();
+            $(`.category-section[data-category="${category}"]`).fadeIn(300);
+        }
+        
+        // 重新触发懒加载
+        const observer = lozad();
+        observer.observe();
     });
 </script>
 <!-- Bottom Scripts -->
-<script src="assets/static/index/js/bootstrap.min.js"></script>
-<script src="assets/static/index/js/TweenMax.min.js"></script>
-<script src="assets/static/index/js/resizeable.js"></script>
-<script src="assets/static/index/js/joinable.js"></script>
-<script src="assets/static/index/js/xenon-api.js"></script>
-<script src="assets/static/index/js/xenon-toggles.js"></script>
+<script src="/assets/static/index/js/bootstrap.min.js"></script>
+<script src="/assets/static/index/js/TweenMax.min.js"></script>
+<script src="/assets/static/index/js/resizeable.js"></script>
+<script src="/assets/static/index/js/joinable.js"></script>
+<script src="/assets/static/index/js/xenon-api.js"></script>
+<script src="/assets/static/index/js/xenon-toggles.js"></script>
 <!-- JavaScripts initializations and stuff -->
-<script src="assets/static/index/js/xenon-custom.js"></script>
-<script src="assets/static/index/js/lozad.js"></script>
+<script src="/assets/static/index/js/xenon-custom.js"></script>
+<script src="/assets/static/index/js/lozad.js"></script>
 </body>
 </html>
