--- a/web/templates/index/about.html
+++ b/web/templates/index/about.html
@@ -95,7 +95,7 @@
         <footer class="main-footer sticky footer-type-1 fixed">
             <div class="footer-inner">
                 <div class="footer-text">
-                    &copy; 2019- 2025
+                    &copy; 2019-<script>document.write(new Date().getFullYear())</script>
                     <a href="/about"><strong>Freeb</strong></a> design by <a href="https://www.freeb.vip" target="_blank"><strong>飞比智能</strong></a>
                 </div>
                 <div class="go-up">
